add tft game link

--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
                                 <img src="https://static-cdn.jtvnw.net/ttv-boxart/27471_IGDB-188x250.jpg" alt="Imagem do jogo Minecraft">
                             </a>
                         </li>
+
+                        <li>
+                            <a 
+                            target="_blank"
+                            href="https://www.twitch.tv/directory/game/Grand%20Theft%20Auto%20V">
+                                <img src="https://static-cdn.jtvnw.net/ttv-boxart/32982_IGDB-285x380.jpg" alt="Imagem do jogo GTA IV">
+                            </a>
+                        </li>
                     </ul>
             </section>
             <section>
